[package]
name = "words"
description = "A CLI for creating posts for my blog."
version = "0.1.0"
authors = ["Nathan Knowler <nathan@knowler.me>"]
edition = "2018"

[dependencies]
structopt = "0.2.14"
chrono = "0.4.6"
heck = "0.3.1"
serde = "1.0.84"
serde_derive = "1.0.84"
tera = "0.11.20"
log = "0.4.6"
pretty_env_logger = "0.3.0"
